v1.7.2 -
* fixed a bug when using /homeinvite to the same player/home created an exception
* fixed unreported bug where an expiring HomeInvite would delete the associated Home also
* fixed unreported bug that prevented /homeinvite working for an offline player if the exact name was used
* fixed homeInvite NPE when associated home was deleted

v1.7.1 - Aug 26, 2012
* fixed issue with new modeExcludeNewPlayerSpawn not being usable
* fixed issue with command usurping and CommandBook
* made onRegionEnter/Exit pick up world context automatically for world-specific rules
* additions to spawnLastLocation strategy to allow it to respond better to custom events
* added '*' as an option for commands.disabledCommands to turn off all default HSP commands
* disabled setting of Permission on PluginCommand objects, not all Permission systems play nice with this Bukkit superperms feature
* fix issue with default event chains not being found

v1.7 - Aug 25, 2012
* database upgrade: HSP will upgrade automatically, but to be safe you should backup your database before upgrading!
* new strategies: SpawnLastLocation and SpawnLocalPlayerSpawn
* new modes: ModeRememberSpawn and ModeRememberLocation
* new WorldGuard mode: modeInRegion
* Extensive direct Multiverse integration with many new modes and events
* See http://dev.bukkit.org/server-mods/homespawnplus/pages/examples/example07/ for example of new modes in action
* New command system which allows HSP to map commands dynamically at runtime
* New command system also finally fully enables "disabledCommands" feature so you can completely disable commands you don't want to use
* Custom event commands (uses new command system)
* Implemented new events "onRegionEnter" and "onRegionExit"
* added "onNewPlayer" event for new players. If no result is returned, HSP will fall through to "onJoin" which maintains backwards compatibility
* added Spanish locale (thanks Consalvo!)
* Ticket #123: added modeExcludeNewPlayerSpawn 