@@ -21,6 +21,11 @@ public class HomeDelete extends BaseCommand {
 	@Override
 	public String[] getCommandAliases() { return new String[] {"homed", "deletehome", "rmhome"}; }
 	
+	@Override
+	public String getUsage() {
+		return	util.getLocalizedMessage(HSPMessages.CMD_HOMEDELETE_USAGE);
+	}
+
 	/* (non-Javadoc)
 	 * @see org.morganm.homespawnplus.command.Command#execute(org.bukkit.entity.Player, org.bukkit.command.Command, java.lang.String[])
 	 */
