@@ -8,6 +8,7 @@ import java.util.logging.Level;
 import org.bukkit.command.Command;
 import org.bukkit.entity.Player;
 import org.morganm.homespawnplus.command.BaseCommand;
+import org.morganm.homespawnplus.i18n.HSPMessages;
 import org.morganm.homespawnplus.storage.StorageException;
 
 /**
@@ -28,10 +29,20 @@ public class HomeInviteDelete extends BaseCommand {
 			return true;
 		
 		if( args.length < 1 ) {
-			return false;
+			util.sendLocalizedMessage(p, HSPMessages.ERROR_ID_NUMBER_REQUIRED,
+					"input", "null");
+			return true;
 		}
 		
-		int id = Integer.parseInt(args[0]);
+		int id = -1;
+		try {
+			id = Integer.parseInt(args[0]);
+		}
+		catch(NumberFormatException e) {
+			util.sendLocalizedMessage(p, HSPMessages.ERROR_ID_NUMBER_REQUIRED,
+					"input", args[0]);
+			return true;
+		}
 		org.morganm.homespawnplus.entity.HomeInvite hi = plugin.getStorage().getHomeInviteDAO().findHomeInviteById(id);
 		
 		// make sure we found an object and that the home is owned by the player
@@ -40,15 +51,19 @@ public class HomeInviteDelete extends BaseCommand {
 				org.morganm.homespawnplus.entity.Home h = hi.getHome();
 				String invitee = hi.getInvitedPlayer();
 				plugin.getStorage().getHomeInviteDAO().deleteHomeInvite(hi);
-				util.sendMessage(p,  "Invite id #"+id+" was deleted [home name="+h.getName()+", invitee="+invitee+"]");
+				util.sendLocalizedMessage(p, HSPMessages.HOMEINVITE_DELETED,
+						"id", id,
+						"home", h.getName(),
+						"invitee", invitee);
 			}
 			catch(StorageException e) {
-				util.sendMessage(p, "There was a system error, please contact your administrator");
+				util.sendLocalizedMessage(p, HSPMessages.GENERIC_ERROR);
 				log.log(Level.WARNING, "Caught exception in /"+getCommandName()+": "+e.getMessage(), e);
 			}
 		}
 		else {
-			util.sendMessage(p, "No invite with the id "+args[0]+" found. Type /hil to see your invites");
+			util.sendLocalizedMessage(p, HSPMessages.HOMEINVITE_ID_NOT_FOUND,
+					"id", args[0]);
 		}
 		
 		return true;
