@@ -151,3 +151,32 @@ CMD_HOMELIST_NO_HOMES_FOUND=No homes found for %player% on world "%world%".
 
 #v1.7
 NO_LOCATION_FOUND=No location found.
+
+#V1.7.3
+ERROR_ID_NUMBER_REQUIRED=%red%ERROR%default_color%: Id number required, was given: %white%%input%
+HOMEINVITE_DELETED=Invite id #%id% was deleted [home name=%home%, invitee=%invitee%]
+HOMEINVITE_ID_NOT_FOUND=No invite with id "%id%" was found. Type /hil to see your invites
+HOME_ARRIVED=You have arrived at home %home%
+HOME_DEPARTING_TO=Going to home %home%
+SPAWN_ARRIVED=You have arrived at spawn %spawn%
+SPAWN_DEPARTING_TO=Going to spawn %home%
+HOMEINVITE_DEPARTING_TO=Going to home %home% (owned by player %player%)
+
+CMD_HOME_USAGE=/<command>
+CMD_HOMEINVITE_USAGE=/<command> player - temporarily invite player to your default home on this world, or global home if you only have one home\n\
+           /<command> player homeName - temporarily invite player to your home named 'homeName' (can be home id #)\n\
+           /<command> player homeName time - same as above but with expire time, for example '1d 4h' or 'perm' for permanent
+CMD_GROUPSPAWN_USAGE=Incorrect usage of command /<command>. Examples:\n\
+           /<command> - respawns you at your primary group spawn\n\
+           /<command> Admins - respawns you at the 'Admins' group spawn
+CMD_HOMEDELETE_USAGE=/<command>\n\
+           /<command> homeName
+CMD_GROUPQUERY_USAGE=/<command> player
+CMD_PERMCHECK_USAGE=/<command> permission [player] [world] - player and world are optional, default to current player and world
+CMD_HOMEDELETEOTHER_USAGE=/<command> player\n\
+           /<command> player homeName\n\
+           /<command> player w:worldName
+CMD_HOMELIST_USAGE=/<command> - show homes on all worlds\n\
+           /<command> world - show homes on 'world'
+CMD_HOMELISTOTHER_USAGE=/<command> player - show homes for player on all worlds\n\
+           /<command> player world - show homes for player on 'world'
