@@ -3,6 +3,9 @@ v1.7.2 -
 * fixed unreported bug where an expiring HomeInvite would delete the associated Home also
 * fixed unreported bug that prevented /homeinvite working for an offline player if the exact name was used
 * fixed homeInvite NPE when associated home was deleted
+* added robust reflections implementation for dyanmic Command Registration
+* fixed NFE when /homeinvitedelete was given non-numeric input
+* added command usages back (they were lost in the dynamic command conversion with 1.7). Bonus: they are now localizable
 
 v1.7.1 - Aug 26, 2012
 * fixed issue with new modeExcludeNewPlayerSpawn not being usable
